added services section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <h4 class="text-[0.8rem] font-medium tracking-wide">HOTEL BOOKING</h4>
         </div>
         <div id="nav-items">
-          <a href="#" class="px-[1.5rem] text-white">HOME</a>
-          <a href="#" class="px-[1.5rem] text-white unselected">ABOUT</a>
-          <a href="#" class="px-[1.5rem] text-white unselected">ROOMS</a>
-          <a href="#" class="px-[1.5rem] text-white unselected">RESTO & BAR</a>
-          <a href="#" class="px-[1.5rem] text-white unselected">BLOG</a>
-          <a href="#" class="px-[1.5rem] text-white unselected">CONTACT</a>
+          <a href="#" class="px-[0.8rem] text-white">HOME</a>
+          <a href="#" class="px-[0.8rem] text-white unselected">ABOUT</a>
+          <a href="#" class="px-[0.8rem] text-white unselected">ROOMS</a>
+          <a href="#" class="px-[0.8rem] text-white unselected">RESTO & BAR</a>
+          <a href="#" class="px-[0.8rem] text-white unselected">BLOG</a>
+          <a href="#" class="px-[0.8rem] text-white unselected">CONTACT</a>
         </div>
       </div>
     </nav>
@@ -129,18 +129,6 @@
                 Far far away, behind the word mountains, far from the countries
                 Vokalia.
               </p>
-              <!-- <div class="card-overlay">
-                <img
-                  class="h-[72px] w-[105px]"
-                  src="./images/cozy-icon.png"
-                  alt="icon of a pillow"
-                />
-                <h3 class="old-standard">Cozy Room</h3>
-                <p>
-                  Far far away, behind the word mountains, far from the
-                  countries Vokalia.
-                </p>
-              </div> -->
             </div>
             <div id="card2" class="w-[300px] h-[230px] mx-6"></div>
           </div>
@@ -172,6 +160,19 @@
             language ocean.
           </p>
           <button>BOOK YOUR ROOM NOW</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services section -->
+    <section id="services">
+      <div id="services-cointainer">
+        <h4 class="sub-header">UNWIND SERVICES</h4>
+        <h2 class="header">Explore Our Hotel<br />Services</h2>
+      </div>
+      <div class="icon-cards">
+        <div class="icon-card">
+          
         </div>
       </div>
     </section>
