--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <div id="about-us-description" class="w-[6`0%]">
+        <div id="about-us-description" class="w-[47%]">
           <h4>ABOUT US</h4>
           <h2 class="old-standard text-[4.1rem]">
             Unwind A Hotel Booking Agency
