corrected spacing aroung each section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="nunito">
     <!-- Nav begins here -->
     <nav class="w-[100vw] flex justify-center">
       <div class="flex w-[70%] justify-between items-center py-[1.6%]">
@@ -115,7 +115,7 @@
 
     <!-- About Us Section -->
     <section id="about-us">
-      <div id="about-us-container" class="py-48">
+      <div id="about-us-container" class="">
         <div id="about-us-cards" class="w-[40%] flex">
           <div id="left-gallery" class="">
             <div id="card1" class="w-[300px] h-[276px] mx-6">
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div id="about-us-description" class="w-[47%]">
-          <h4>ABOUT US</h4>
+          <h4 class="sub-header">ABOUT US</h4>
           <h2 class="old-standard text-[4.1rem]">
             Unwind A Hotel Booking Agency
           </h2>
@@ -167,13 +167,36 @@
     <!-- Services section -->
     <section id="services">
       <div id="services-cointainer">
+        <div class="headings">
         <h4 class="sub-header">UNWIND SERVICES</h4>
-        <h2 class="header">Explore Our Hotel<br />Services</h2>
+        <h2 class="header">Explore Our Hotel Services</h2>
       </div>
       <div class="icon-cards">
         <div class="icon-card">
-          
+          <img src="./images/ico-1.png" alt="image of Wifi">
+          <h2>Free Wifi</h2>
         </div>
+        <div class="icon-card">
+          <img src="./images/ico-6.png" alt="image of Wifi">
+          <h2>Easy Booking</h2>
+        </div>
+        <div class="icon-card">
+          <img src="./images/ico-5.png" alt="image of Wifi">
+          <h2>Restaurant</h2>
+        </div>
+        <div class="icon-card">
+          <img src="./images/ico-4.png" alt="image of Wifi">
+          <h2>Swimming Pool</h2>
+        </div>
+        <div class="icon-card">
+          <img src="./images/ico-3.png" alt="image of Wifi">
+          <h2>Beauty & Health</h2>
+        </div>
+        <div class="icon-card">
+          <img src="./images/ico-2.png" alt="image of Wifi">
+          <h2>Help & Support</h2>
+        </div>
+      </div>
       </div>
     </section>
   </body>
