fixed query section overlay

--- a/index.html
+++ b/index.html
@@ -61,54 +61,60 @@
 
     <!-- Query Section -->
     <section id="query">
-      <div id="query1">
-        <div class="check-in">
-          <h4>CHECK-IN</h4>
-          <div>
-            <i class="icon fa-regular fa-calendar-days mr-[8px]"></i>
-            <input class="txt-area" type="text" placeholder="Check-in date" />
+      <div id="query-container">
+        <div id="query1">
+          <div class="check-in">
+            <h4>CHECK-IN</h4>
+            <div>
+              <i class="icon fa-regular fa-calendar-days mr-[8px]"></i>
+              <input class="txt-area" type="text" placeholder="Check-in date" />
+            </div>
           </div>
-        </div>
-        <div class="check-out">
-          <h4>CHECK-OUT</h4>
-          <div>
-            <i class="icon fa-regular fa-calendar-days mr-[8px]"></i>
-            <input class="txt-area" type="text" placeholder="Check-out date" />
+          <div class="check-out">
+            <h4>CHECK-OUT</h4>
+            <div>
+              <i class="icon fa-regular fa-calendar-days mr-[8px]"></i>
+              <input
+                class="txt-area"
+                type="text"
+                placeholder="Check-out date"
+              />
+            </div>
           </div>
-        </div>
 
-        <div class="rooms">
-          <h4>ROOMS</h4>
-          <div>
-            <i class="icon fa-solid fa-angle-down mr-[8px]"></i>
-            <select class="dropdown" name="rooms" id="rooms">
-              <option value="Suite">Suite</option>
-              <option value="Family Room">Family Room</option>
-              <option value="Classic Room">Classic Room</option>
-              <option value="Superior Room">Superior Room</option>
-              <option value="Luxury Room">Luxury Room</option>
-            </select>
+          <div class="rooms">
+            <h4>ROOMS</h4>
+            <div>
+              <i class="icon fa-solid fa-angle-down mr-[8px]"></i>
+              <select class="dropdown" name="rooms" id="rooms">
+                <option value="Suite">Suite</option>
+                <option value="Family Room">Family Room</option>
+                <option value="Classic Room">Classic Room</option>
+                <option value="Superior Room">Superior Room</option>
+                <option value="Luxury Room">Luxury Room</option>
+              </select>
+            </div>
+          </div>
+          <div class="guests">
+            <h4>GUESTS</h4>
+            <div>
+              <i class="icon fa-solid fa-angle-down mr-[8px]"></i>
+              <select class="dropdown" name="rooms" id="rooms">
+                <option value="1 Person">1 Person</option>
+                <option value="2 Persons">2 Persons</option>
+                <option value="3 Persons">3 Persons</option>
+                <option value="4 Persons">4 Persons</option>
+                <option value="5 Persons">5 Persons</option>
+                <option value="6-9 Persons">6-9 Persons</option>
+                <option value="10+ Persons">10+ Persons</option>
+              </select>
+            </div>
           </div>
         </div>
-        <div class="guests">
-          <h4>GUESTS</h4>
-          <div>
-            <i class="icon fa-solid fa-angle-down mr-[8px]"></i>
-            <select class="dropdown" name="rooms" id="rooms">
-              <option value="1 Person">1 Person</option>
-              <option value="2 Persons">2 Persons</option>
-              <option value="3 Persons">3 Persons</option>
-              <option value="4 Persons">4 Persons</option>
-              <option value="5 Persons">5 Persons</option>
-              <option value="6-9 Persons">6-9 Persons</option>
-              <option value="10+ Persons">10+ Persons</option>
-            </select>
+        <div id="query2">
+          <div class="chk-avail">
+            <h4>CHECK<br />AVAILABILITY</h4>
           </div>
-        </div>
-      </div>
-      <div id="query2">
-        <div class="chk-avail">
-          <h4>CHECK<br />AVAILABILITY</h4>
         </div>
       </div>
     </section>
@@ -168,35 +174,35 @@
     <section id="services">
       <div id="services-cointainer">
         <div class="headings">
-        <h4 class="sub-header">UNWIND SERVICES</h4>
-        <h2 class="header">Explore Our Hotel Services</h2>
-      </div>
-      <div class="icon-cards">
-        <div class="icon-card">
-          <img src="./images/ico-1.png" alt="image of Wifi">
-          <h2>Free Wifi</h2>
+          <h4 class="sub-header">UNWIND SERVICES</h4>
+          <h2 class="header">Explore Our Hotel Services</h2>
         </div>
-        <div class="icon-card">
-          <img src="./images/ico-6.png" alt="image of Wifi">
-          <h2>Easy Booking</h2>
+        <div class="icon-cards">
+          <div class="icon-card">
+            <img src="./images/ico-1.png" alt="image of Wifi" />
+            <h2>Free Wifi</h2>
+          </div>
+          <div class="icon-card">
+            <img src="./images/ico-6.png" alt="image of Wifi" />
+            <h2>Easy Booking</h2>
+          </div>
+          <div class="icon-card">
+            <img src="./images/ico-5.png" alt="image of Wifi" />
+            <h2>Restaurant</h2>
+          </div>
+          <div class="icon-card">
+            <img src="./images/ico-4.png" alt="image of Wifi" />
+            <h2>Swimming Pool</h2>
+          </div>
+          <div class="icon-card">
+            <img src="./images/ico-3.png" alt="image of Wifi" />
+            <h2>Beauty & Health</h2>
+          </div>
+          <div class="icon-card">
+            <img src="./images/ico-2.png" alt="image of Wifi" />
+            <h2>Help & Support</h2>
+          </div>
         </div>
-        <div class="icon-card">
-          <img src="./images/ico-5.png" alt="image of Wifi">
-          <h2>Restaurant</h2>
-        </div>
-        <div class="icon-card">
-          <img src="./images/ico-4.png" alt="image of Wifi">
-          <h2>Swimming Pool</h2>
-        </div>
-        <div class="icon-card">
-          <img src="./images/ico-3.png" alt="image of Wifi">
-          <h2>Beauty & Health</h2>
-        </div>
-        <div class="icon-card">
-          <img src="./images/ico-2.png" alt="image of Wifi">
-          <h2>Help & Support</h2>
-        </div>
-      </div>
       </div>
     </section>
   </body>
