general padding fixes on all sections

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <h4 class="text-[0.8rem] font-medium tracking-wide">HOTEL BOOKING</h4>
         </div>
         <div id="nav-items">
-          <a href="#" class="px-[0.8rem] text-white">HOME</a>
-          <a href="#" class="px-[0.8rem] text-white unselected">ABOUT</a>
-          <a href="#" class="px-[0.8rem] text-white unselected">ROOMS</a>
-          <a href="#" class="px-[0.8rem] text-white unselected">RESTO & BAR</a>
-          <a href="#" class="px-[0.8rem] text-white unselected">BLOG</a>
-          <a href="#" class="px-[0.8rem] text-white unselected">CONTACT</a>
+          <a href="#" class="px-[1rem] text-white">HOME</a>
+          <a href="#" class="px-[1rem] text-white unselected">ABOUT</a>
+          <a href="#" class="px-[1rem] text-white unselected">ROOMS</a>
+          <a href="#" class="px-[1rem] text-white unselected">RESTO & BAR</a>
+          <a href="#" class="px-[1rem] text-white unselected">BLOG</a>
+          <a href="#" class="px-[1rem] text-white unselected">CONTACT</a>
         </div>
       </div>
     </nav>
@@ -157,7 +157,7 @@
         <div id="about-us-description" class="w-[47%]">
           <h4 class="sub-header">ABOUT US</h4>
           <h2 class="old-standard text-[4.1rem]">
-            Unwind A Hotel Booking Agency
+            Unwind, A Hotel Booking Agency
           </h2>
           <p class="nunito">
             Far far away, behind the word mountains, far from the countries
