added black-bar section

--- a/index.html
+++ b/index.html
@@ -205,5 +205,20 @@
         </div>
       </div>
     </section>
+
+    <!-- Black bar -->
+    <section id="black-bar">
+      <div id="black-bar-container">
+        <div class="desc">
+          <h4 class="sub-header">FIND THE BEST HOTEL FOR LEAVING</h4>
+          <h2 class="header">Find The Best Hotel For Your Next Vacation</h2>
+        </div>
+        <div class="button">
+          <div class="btn-container">
+            <button>BOOK NOW</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
