completed black bar section

--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
 
     <!-- Black bar -->
     <section id="black-bar">
-      <div id="black-bar-container">
-        <div class="desc">
-          <h4 class="sub-header">FIND THE BEST HOTEL FOR LEAVING</h4>
-          <h2 class="header">Find The Best Hotel For Your Next Vacation</h2>
-        </div>
-        <div class="button">
-          <div class="btn-container">
+      <div class="bb-overlay">
+        <div id="black-bar-container">
+          <div class="desc">
+            <h4 class="sub-header">FIND THE BEST HOTEL FOR LEAVING</h4>
+            <h2 class="header">Find The Best Hotel For Your Next Vacation</h2>
+          </div>
+          <div class="btn">
             <button>BOOK NOW</button>
           </div>
         </div>
