created features section

--- a/index.html
+++ b/index.html
@@ -220,5 +220,62 @@
         </div>
       </div>
     </section>
+
+    <!-- Featured Rooms -->
+    <section id="featured-rooms">
+      <div id="f-rooms">
+        <div class="headings">
+          <h4 class="sub-header">OUR ROOMS</h4>
+          <h2 class="old-standard text-[4.1rem]">Featured Rooms</h2>
+        </div>
+        <div class="room-cards">
+          <div class="room-card">
+            <div class="card-desc">
+              <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+                qui voluptatibus officiis pariatur quis praesentium neque
+                voluptates aliquam quam!
+              </p>
+              <div class="linkz">
+                <h5>$450 / Night</h5>
+                <button>BOOK NOW</button>
+              </div>
+            </div>
+            <div class="card-img"></div>
+          </div>
+          <div class="room-card">
+            <div class="card-desc">
+              <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+                qui voluptatibus officiis pariatur quis praesentium neque
+                voluptates aliquam quam!
+              </p>
+              <div class="linkz">
+                <h5>$450 / Night</h5>
+                <button>BOOK NOW</button>
+              </div>
+            </div>
+            <div class="card-img"></div>
+          </div>
+          <div class="room-card">
+            <div class="card-desc">
+              <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+                qui voluptatibus officiis pariatur quis praesentium neque
+                voluptates aliquam quam!
+              </p>
+              <div class="linkz">
+                <h5>$450 / Night</h5>
+                <button>BOOK NOW</button>
+              </div>
+            </div>
+            <div class="card-img"></div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
