completed features section and began footer

--- a/index.html
+++ b/index.html
@@ -234,48 +234,67 @@
               <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
-                qui voluptatibus officiis pariatur quis praesentium neque
-                voluptates aliquam quam!
+                qui voluptatibus officiis pariatur quis praesentium
               </p>
               <div class="linkz">
                 <h5>$450 / Night</h5>
                 <button>BOOK NOW</button>
               </div>
             </div>
-            <div class="card-img"></div>
+            <div class="card-img-1"></div>
+          </div>
+          <div class="room-card">
+            <div class="card-img-2"></div>
+
+            <div class="card-desc">
+              <h3 class="old-standard text-[1.8rem] pb-[10px]">Family Room</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
+                qui voluptatibus officiis pariatur quis praesentium
+              </p>
+              <div class="linkz">
+                <h5>$750 / Night</h5>
+                <button>BOOK NOW</button>
+              </div>
+            </div>
           </div>
           <div class="room-card">
             <div class="card-desc">
-              <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
+              <h3 class="old-standard text-[1.8rem] pb-[10px]">Deluxe Room</h3>
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
-                qui voluptatibus officiis pariatur quis praesentium neque
-                voluptates aliquam quam!
+                qui voluptatibus officiis pariatur quis praesentium
               </p>
               <div class="linkz">
-                <h5>$450 / Night</h5>
+                <h5>$1000 / Night</h5>
                 <button>BOOK NOW</button>
               </div>
             </div>
-            <div class="card-img"></div>
-          </div>
-          <div class="room-card">
-            <div class="card-desc">
-              <h3 class="old-standard text-[1.8rem] pb-[10px]">Suite Room</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo
-                qui voluptatibus officiis pariatur quis praesentium neque
-                voluptates aliquam quam!
-              </p>
-              <div class="linkz">
-                <h5>$450 / Night</h5>
-                <button>BOOK NOW</button>
-              </div>
-            </div>
-            <div class="card-img"></div>
+            <div class="card-img-3"></div>
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Footer Section -->
+    <section id="footer">
+      <div id="footer-container">
+        <div id="section1">
+          <div id="logo" class="text-white">
+            <h3 class="text-3xl font-bold tracking-wide">Unwind</h3>
+            <h4 class="text-[0.8rem] font-medium tracking-wide">
+              HOTEL BOOKING
+            </h4>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi nulla
+            qui dolores.
+          </p>
+        </div>
+        <div id="section2">Services</div>
+        <div id="section3">Quick Links</div>
+      </div>
+      <div id="section4">Have a Question</div>
     </section>
   </body>
 </html>
