minor changes to footer

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <section id="footer">
       <div id="footer-container">
         <div id="section1">
-          <div id="logo" class="text-white">
+          <div id="logo" class="text-white mb-[40px]">
             <h3 class="text-3xl font-bold tracking-wide">Unwind</h3>
             <h4 class="text-[0.8rem] font-medium tracking-wide">
               HOTEL BOOKING
@@ -290,6 +290,7 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi nulla
             qui dolores.
           </p>
+          <div class="sm"></div>
         </div>
         <div id="section2">Services</div>
         <div id="section3">Quick Links</div>
