--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     </section>
 
     <!-- Footer Section -->
-    <section id="footer">
+    <!-- <section id="footer">
       <div id="footer-container">
         <div id="section1">
           <div id="logo" class="text-white mb-[40px]">
@@ -296,6 +296,6 @@
         <div id="section3">Quick Links</div>
       </div>
       <div id="section4">Have a Question</div>
-    </section>
+    </section> -->
   </body>
 </html>
